compiler/tests-spec/testData/diagnostics/s-xx.xx_contracts/declarations/neg/1.kt
/*
 KOTLIN DIAGNOSTICS FUTURE SPEC TEST (NEGATIVE)

 SECTION XX.XX: Contracts
 CATEGORY: declarations
 NUMBER: 1
 DESCRIPTION: Empty 'when' with bound value.
 */

fun case_1(value: Int) {
    when (<!UNUSED_EXPRESSION!>value<!>) {}
}
